Done with assignment

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<!--THis is a comment-->
+<head>
+    <link rel="Stylesheet" type="text/css" href="style.css" />
+    <title>Katy Perry's Favorite cats</title>
+</head>
+<body>
+    <h1>Test line</h1>
+    <l>This is a test paragraph</l>
+</body>
+</html>
